# live-haskell

./: .gitignore  README.md
client/: index.html  live_haskell.js  main.js  script.js  style.css  tooltip.js
client/lib/: debounce.js  rotate.css
client/lib/chardin/: chardin.js
client/lib/qtip/: qtip.js
node-server/: app.js  package.json
server/: .gitignore  live-haskell.cabal
server/lib/: SafePrelude.hs
server/lib/System/: TIO.hs
server/prelude/Data/: IORef.hs
server/prelude/System/: IO.hs
server/src/: ErrorParser.hs  GHCIWrap.hs  HsParser.hs  Main.hs  MiniHsParser.hs  SystemPathCopy.hs
snap/: barebones.cabal  stack.yaml  test.hs
snap/lib/: SafePrelude.hs
snap/lib/System/: TIO.hs
snap/lib/System/TIO/: Internal.hs
snap/prelude/: Prelude.hs
snap/prelude/Data/: IOArray.hs
snap/prelude/Data/Array/: IO.hs
snap/src/: GHCIWrap.hs  HsParser.hs  Main.hs  MiniHsParser.hs  SafePrelude.hs
snap/src/Data/: TIOArray.hs  TIORef.hs
snap/src/System/: TIO.hs
test/: test.cabal
test/app/: DemoIO 2.hs  DemoIO.hs  DemoTrace 2.hs  DemoTrace.hs  Graph.hs  Main.hs
