Name:                live-haskell
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

library
  hs-source-dirs:      lib
  exposed-modules:     SafePrelude, System.TIO, Data.TIOArray, Data.TIORef
  other-modules:       System.TIO.Internal
  build-depends:       base >= 4.7 && < 5 ,
                       filepath ,
                       transformers ,
                       unix,
                       array
  default-language:    Haskell2010


Executable server
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: GHCIWrap, ErrorParser, HsParser, MiniHsParser

  build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    json                      >=0.9    && < 0.99,
    snap-extras               >=0.11.0,
    process                   ==1.2.3.0,
    aeson                     >=0.9.0,
    text                      ==1.2.2.0,
    transformers              ==0.4.2.*,
    containers                == 0.5.6.*,
    unix, filepath, regex-compat,
    ghc == 7.10.3 ,
    ghc-paths ,
    directory                 >=1.2.2,
    temporary

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
